# drf-auth

./: db.sqlite3  pyproject.toml
accounts/: admin.py
accounts/migrations/: 0001_initial.py
drf_auth_project/: settings.py  urls.py  wsgi.py
things/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
things/migrations/: 0001_initial.py
